[package]
name = "ttv-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
eframe = "0.25.0"
egui = "0.25.0"
egui_extras = { version = "0.25.0", features = ["image"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["sync"] }
tungstenite = "0.21.0"
